--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
           mvn --batch-mode -DskipTests sonar:sonar
           -Dsonar.host.url=https://sonarcloud.io
           -Dsonar.organization=farao-community
-          -Dsonar.projectKey=farao-community_gridcapa-core-valid-id
+          -Dsonar.projectKey=farao-community_gridcapa-core-valid-day-ahead-conservative
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -61,13 +61,13 @@ jobs:
           MAVEN_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
           MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
-      - name: Re-build with Maven to avoid multiple .jar achives
+      - name: Re-build with Maven to avoid multiple .jar archives
         run: mvn --batch-mode -Pdefault,coverage clean install -DskipTests
 
       - name: Build and publish Docker image
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: farao/gridcapa-core-valid-intraday
+          name: farao/gridcapa-core-valid-day-ahead-conservative
           username: farao
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           tags: v${{ github.event.inputs.releaseVersion }}
