--- a/gridcapa-core-valid-day-ahead-conservative-app/pom.xml
+++ b/gridcapa-core-valid-day-ahead-conservative-app/pom.xml
@@ -60,6 +60,10 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.farao-community.farao</groupId>
+            <artifactId>gridcapa-core-valid-commons</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
