--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
         <jsonapi.converter.version>0.11</jsonapi.converter.version>
         <maven.jaxb.version>4.0.8</maven.jaxb.version>
         <opencsv.version>5.6</opencsv.version>
+        <gridcapa.core-valid-commons.version>0.2.0-beta</gridcapa.core-valid-commons.version>
 
         <!-- BUSINESS DEPENDENCIES -->
         <farao.dependencies.version>1.43.0</farao.dependencies.version>
@@ -149,7 +150,7 @@
             <dependency>
                 <groupId>com.farao-community.farao</groupId>
                 <artifactId>gridcapa-core-valid-commons</artifactId>
-                <version>0.2.0-beta</version>
+                <version>${gridcapa.core-valid-commons.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
