--- a/gridcapa-core-valid-day-ahead-conservative-app/src/test/resources/application.yml
+++ b/gridcapa-core-valid-day-ahead-conservative-app/src/test/resources/application.yml
@@ -22,6 +22,7 @@ core-valid-day-ahead-conservative-runner:
   whitelist:
     - file:/
     - http://minio:9000/
+core-valid-commons:
   core-hubs:
     - name: Autriche
       ramcep2-code: AT
