Putting everything together

--- a/gridcapa-core-valid-day-ahead-conservative-app/src/main/resources/application.yml
+++ b/gridcapa-core-valid-day-ahead-conservative-app/src/main/resources/application.yml
@@ -3,6 +3,8 @@ spring:
     function:
       definition: request
 
+core-valid-d2:
+  zone-id: "Europe/Paris"
 core-valid-commons:
   core-hubs:
     - name: Autriche
