--- a/gridcapa-core-valid-day-ahead-conservative-app/src/main/resources/application.yml
+++ b/gridcapa-core-valid-day-ahead-conservative-app/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     function:
       definition: request
 
-core-valid-d2:
+core-valid-day-ahead-conservative-runner:
   zone-id: "Europe/Paris"
 core-valid-commons:
   core-hubs:
